# algebraic.cpp

./: .gitmodules  CMakeLists.txt  README.md  TODO.md
internals/wip/: CMakeLists.txt
internals/wip/program/: basic.hpp  json.cpp  json.hpp  json_test.cpp  main.cpp
internals/wip/program/core/: structures.hpp  types.hpp
internals/wip/program/core/types/: chars.hpp  fwd.hpp  lazy.hpp  lazy_test.cpp  mut.hpp  product.hpp  product_test.cpp  rec.hpp  shared.hpp  sum.hpp  sum_test.cpp  the.hpp
internals/wip/program/core/types/detail/: counted.hpp  shared_sum.hpp  value.hpp
internals/wip/program/generics/: bottom_up.hpp  bottom_up_test.cpp  pretty.hpp
internals/wip/program/parsing/: c_str_stream.hpp  c_str_stream_test.cpp  parsing.hpp  parsing_test.cpp
internals/wip/program/prettier/: prettier.cpp  prettier.hpp
internals/wip/program/types/: cons.hpp  key_value.hpp  lhs_rhs.hpp  list.hpp  list_lazy.hpp  list_lazy_test.cpp  list_strict.hpp  list_strict_test.cpp  none.hpp  option.hpp  option_test.cpp  some.hpp
internals/wip/program/util/: finally.hpp  meta.hpp  panic.cpp  panic.hpp  test_runner.hpp  trace.cpp  trace.hpp  tycon.hpp
